packages/ds/styles/src/styles/components/input.css
@layer base {
  /* Estrutura base do input */
  .ds-input {
    height: 40px;
    width: 100%;
    padding: 0 16px;

    border-radius: var(--ds-radius-md);
    border: 1px solid var(--ds-border);
    background-color: var(--ds-bg);
    color: var(--ds-text-default);
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);

    font-size: var(--ds-font-size-sm);
    line-height: var(--ds-line-height-normal);

    transition:
      border-color 0.2s ease-in-out,
      box-shadow 0.2s ease-in-out,
      background-color 0.2s ease-in-out,
      color 0.2s ease-in-out;
  }

  /* Variante visual padrão */

  [class~="ds-input:base"] {
    border: 1px solid var(--ds-border);
    background-color: var(--ds-bg);
    color: var(--ds-text-default);
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
  }

  [class~="ds-input:base"]::placeholder {
    color: var(--ds-text-default);
    opacity: 0.8;
  }

  [class~="ds-input:base"]:focus {
    outline: none;
    border-color: var(--ds-primary);
    box-shadow: 0 0 0 2px color-mix(in srgb, var(--ds-primary) 20%, transparent);
  }

  [class~="ds-input:base"]:hover:not(:disabled) {
    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.35);
  }

  [class~="ds-input:base"]:disabled {
    background-color: var(--ds-muted);
    color: var(--ds-text-default);
    cursor: not-allowed;
    opacity: 0.7;
  }

  [class~="ds-input:helper-text"] {
    color: var(--ds-text-default);
    font-size: var(--ds-font-size-sm);
    line-height: var(--ds-line-height-normal);
  }

  /* Estado de erro */
  [class~="ds-input:error"] {
    border-color: var(--ds-error);
  }

  [class~="ds-input:error"]::placeholder {
    color: var(--ds-text-default);
  }

  [class~="ds-input:error"]:focus {
    outline: none;
    border-color: var(--ds-error);
    box-shadow: 0 0 0 2px color-mix(in srgb, var(--ds-error) 20%, transparent);
  }

  [class~="ds-input:error"]:hover:not(:disabled) {
    border-color: var(--ds-error);
    box-shadow: 0 0 4px 2px rgba(221, 8, 8, 0.511);
  }

  [class~="ds-input:error-message"] {
    color: var(--ds-error);
    font-size: var(--ds-font-size-sm);
    line-height: var(--ds-line-height-normal);
  }
}

